# glacier-packagemanager

./: .gitignore  CMakeLists.txt  README.md  glacier-packagemanager.desktop  glacier-packagemanager.privileges  glacier-packagemanager.pro
pamac/: CMakeLists.txt  config.cpp  config.h  database.cpp  database.h  historyitem.cpp  historyitem.h  historyitemmodel.cpp  historyitemmodel.h  plugin.cpp  qmldir  transaction.cpp  transaction.h  updates.cpp  updates.h
qml/: glacier-packagemanager.qml
qml/components/: HistoryItemDelegate.qml  PackageListDelegate.qml
qml/pages/: AuthorizationFailPage.qml  InstallPackagePage.qml  MainPage.qml  OrphansPage.qml  PackageInfoPage.qml  RemovePackagePage.qml  TransactionPage.qml  UpdatesPage.qml
rpm/: glacier-packagemanager.spec
src/: CMakeLists.txt  main.cpp  packagemanager.cpp  packagemanager.h
src/models/: updateslistmodel.cpp  updateslistmodel.h
src/pamac/: CMakeLists.txt  config.cpp  config.h  database.cpp  database.h  historyitem.cpp  historyitem.h  historyitemmodel.cpp  plugin.cpp  transaction.cpp  transaction.h  updates.cpp  updates.h
src/qml/: glacier-packagemanager.qml  glacier-pacmagemanager.qrc
src/qml/components/: HistoryItemDelegate.qml  PackageListDelegate.qml
src/qml/pages/: AuthorizationFailPage.qml  MainPage.qml  OrphansPage.qml  PackageInfoPage.qml  TransactionPage.qml  UpdatesPage.qml
translations/: glacier-packagemanager.ts  glacier-packagemanager_cs.ts  glacier-packagemanager_de.ts  glacier-packagemanager_pl.ts  glacier-packagemanager_ru.ts  glacier-packagemanager_uk.ts
